--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,19 @@ compile.on.save=true
 do.depend=true
 do.jar=true
 do.jlink=false
+file.reference.barbecue-1.5-beta1.jar=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.commons-beanutils-1.8.0.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.commons-collections-2.1.1.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.commons-digester-1.7.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.commons-javaflow-20060411.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.commons-logging-1.0.4.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.iText-2.1.7.jar=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.jasperreports-3.7.3.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.jcalendar-1.3.3.jar=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.jcommon-1.0.15.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.jdt-compiler-3.1.1.jar=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.jfreechart-1.0.12.jar-1=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
+file.reference.mysql-connector-java-5.1.8-bin.jar=D:\\proyectos\\Tiendas Tec\\Sisventas(hotmart)
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
